--- a/src/app/admin/list-user/create-user/create-user.component.html
+++ b/src/app/admin/list-user/create-user/create-user.component.html
@@ -1,39 +1,41 @@
 <div class="modal-header">
-  <h4 class="modal-title pull-left">Create User</h4>
+  <h4 class="modal-title pull-left">{{action}} User</h4>
   <button type="button" class="close pull-right" aria-label="Close" (click)="modalAdd.hide()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <form [formGroup]="createUser">
+  <form [formGroup]="formUser" [ngClass]="{'visiabled': type == 'delete'}">
     <div class="form group row">
       <label for="fullName"><b>Full name</b></label>
       <input type="text" formControlName="fullname" class="form-control" required>
     </div>
     <div class="form-group row">
       <label for="email"><b>Email</b></label>
-      <input type="text" formControlName="email" class="form-control" required>
+      <input type="text" [ngClass]="{'disable': type == 'edit'}" formControlName="email" class="form-control" required>
     </div>
     <div class="form-group row">
       <label for="password"><b>Password</b></label>
       <input type="password" formControlName="password" class="form-control" required>
     </div>
     <div class="form-group row">
-        <label for="age"><b>Age</b></label>
-        <input type="number" formControlName="age" class="form-control" required>
-      </div>
+      <label for="age"><b>Age</b></label>
+      <input type="number" formControlName="age" class="form-control" required>
+    </div>
     <div class="form-group row">
       <label for="photo"><b>Photo</b></label>
       <input type="text" formControlName="avatar" class="form-control" required>
     </div>
     <div class="form-group row">
       <label for="gender"><b>Gender</b></label>
-      <input type="radio" value="false" formControlName="gender"> Male
-      <input type="radio" value="true" formControlName="gender"> Female
+      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="false" formControlName="gender"> Male
+      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="true" formControlName="gender"> Female
     </div>
   </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modalAdd.hide()">Close</button>
-  <button type="submit" class="btn btn-primary" (click)="add()">Add</button>
+  <button type="submit" class="btn" [ngClass]="{'btn-success': type == 'add',
+  'btn-primary': type == 'edit',
+  'btn-danger': type == 'delete'}" (click)="submit()">{{action}}</button>
+  <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modalAdd.hide()">Close</button>
 </div>
