--- a/src/app/admin/list-user/list-user.component.css
+++ b/src/app/admin/list-user/list-user.component.css
@@ -50,3 +50,6 @@ body {
     box-shadow: 3px 3px 0px transparent;
     transition: 0.5s;
 }
+.btn-info .btn-xs pull-right {
+    margin-bottom: 5px;
+}
