Update UI post and category

--- a/src/app/admin/list-user/list-user.component.html
+++ b/src/app/admin/list-user/list-user.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="">
-    <button (click)="actionUser('add')" class="btn btn-info btn-xs pull-right"><b>+</b> Add new user</button>
+    <button (click)="actionUser('add')" class="btn btn-info btn-xs pull-right"><span class="fa fa-plus-circle"></span> Add new user</button>
   </div>
   <table class="table table-bordered custab">
     <thead>
