--- a/src/app/admin/list-user/create-user/create-user.component.css
+++ b/src/app/admin/list-user/create-user/create-user.component.css
@@ -1,3 +1,8 @@
+.modal-body {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .visiabled .form-control {
         background-color: rgb(228, 227, 227);
         pointer-events: none;
