--- a/src/app/admin/list-user/create-user/create-user.component.html
+++ b/src/app/admin/list-user/create-user/create-user.component.html
@@ -6,8 +6,8 @@
 </div>
 <div class="modal-body">
   <form [formGroup]="formUser" [ngClass]="{'visiabled': type == 'delete'}">
-    <div class="form group row">
-      <label for="fullName"><b>Full name</b></label>
+    <div class="form-group row">
+      <label for="fullName"><b>Full Name</b></label>
       <input type="text" formControlName="fullname" class="form-control" required>
     </div>
     <div class="form-group row">
@@ -27,15 +27,16 @@
       <input type="text" formControlName="avatar" class="form-control" required>
     </div>
     <div class="form-group row">
-      <label for="gender"><b>Gender</b></label>
-      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="false" formControlName="gender"> Male
-      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="true" formControlName="gender"> Female
+      <label for="gender"><b>Gender &nbsp;</b></label>
+      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="false" formControlName="gender">&nbsp; Male &nbsp;
+      <input [ngClass]="{'disable': type == 'delete'}" type="radio" [value]="true" formControlName="gender">&nbsp; Female
     </div>
   </form>
 </div>
 <div class="modal-footer">
   <button type="submit" class="btn" [ngClass]="{'btn-success': type == 'add',
   'btn-primary': type == 'edit',
-  'btn-danger': type == 'delete'}" (click)="submit()">{{action}}</button>
+  'btn-danger': type == 'delete'}"
+    (click)="submit()">{{action}}</button>
   <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modalAdd.hide()">Close</button>
 </div>
