--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom" style="clear: both">
-  <div class="navbar-expand m-auto navbar-text">
+<nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom" style="clear: both; height: 40px;">
+  <div class="navbar-expand m-auto navbar-text" style="line-height: 16px;">
     Made with <i class="fa fa-heart"></i> by <a href="#">H-T</a>
   </div>
 </nav>
