--- a/src/app/admin/list-categories/create-categories/create-categories.component.html
+++ b/src/app/admin/list-categories/create-categories/create-categories.component.html
@@ -1,3 +1,25 @@
-<p>
-  create-categories works!
-</p>
+<div class="modal-header">
+  <h4 class="modal-title pull-left">{{action}} Categories</h4>
+  <button type="button" class="close pull-right" aria-label="Close" (click)="modalAdd.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <form [formGroup]="formCategories" [ngClass]="{'visiabled': type == 'delete'}">
+    <div class="form-group row">
+      <label for="key"><b>Category ID</b></label>
+      <input type="text" [ngClass]="{'disable': type == 'edit'}" formControlName="key" class="form-control" required>
+    </div>
+    <div class="form-group row">
+      <label for="name"><b>Category Name</b></label>
+      <input type="text" formControlName="name" class="form-control" required>
+    </div>
+  </form>
+</div>
+<div class="modal-footer">
+  <button type="submit" class="btn" [ngClass]="{'btn-success': type == 'add',
+  'btn-primary': type == 'edit',
+  'btn-danger': type == 'delete'}"
+    (click)="submit()">{{action}}</button>
+  <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modalAdd.hide()">Close</button>
+</div>
