--- a/src/app/admin/list-categories/list-categories.component.html
+++ b/src/app/admin/list-categories/list-categories.component.html
@@ -1,6 +1,7 @@
 <div class="main">
   <div class="">
-    <button (click)="actionCategory('add')" class="btn btn-info btn-xs pull-right"><span class="fa fa-plus-circle"></span> Add new categories</button>
+    <button (click)="actionCategory('add')" class="btn btn-info btn-xs pull-right"><span
+        class="fa fa-plus-circle"></span> Add new categories</button>
   </div>
   <table class="table table-bordered custab">
     <thead>
@@ -13,10 +14,12 @@
     <tbody>
       <tr *ngFor="let list of listCategory; let rowIndex = index">
         <td>{{rowIndex+1}}</td>
-        <td>{{user.fullname}}</td>
+        <td><a href="#">{{list.name}}</a></td>
         <td class="text-center">
-          <button (click)="actionCategory('edit', list)" class='btn btn-info btn-xs'><span class="fa fa-edit"></span></button>&nbsp;
-          <button (click)="actionCategory('delete', list)" class="btn btn-danger btn-xs"><span class="fa fa-remove"></span></button>
+          <button (click)="actionCategory('edit', list)" class='btn btn-info btn-xs'><span
+              class="fa fa-edit"></span></button>&nbsp;
+          <button (click)="actionCategory('delete', list)" class="btn btn-danger btn-xs"><span
+              class="fa fa-remove"></span></button>
         </td>
       </tr>
     </tbody>
