--- a/src/app/admin/list-post/create-post/create-post.component.html
+++ b/src/app/admin/list-post/create-post/create-post.component.html
@@ -1,3 +1,12 @@
-<p>
-  create-post works!
-</p>
+<div class="modal-header">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Post</a></li>
+      <li class="breadcrumb-item active" aria-current="page">IBM Think 2019Box</li>
+    </ol>
+  </nav>
+  <button type="button" class="close pull-right" aria-label="Close" (click)="modalAdd.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body"></div>
